<resources>
    <string name="app_name">NDAB News App</string>
    <string name="near_the">Near the</string>

    <!-- Text to display in the list when there are no earthquakes [CHAR LIMIT=NONE] -->
    <string name="no_news">No news stories found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Location Preference [CHAR LIMIT=30] -->
    <string name="settings_location_pref_label">Location of Interest</string>
    <string name="settings_location_pref_key" translatable="false">location_pref</string>
    <string name="settings_location_pref_default" translatable="false">california</string>

    <!--User can select Anywher instead of california-->
    <string name="settings_location_pref_anywhere_label">Anywhere</string>
    <string name="settings_location_pref_anywhere_value" translatable="false"></string>

    <!--User can select California for news-->
    <string name="settings_location_pref_california_label">California</string>
    <string name="settings_location_pref_california_value" translatable="false">california</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>
</resources>
