<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_location_pref_default"
        android:entries="@array/settings_location_query_labels"
        android:entryValues="@array/settings_location_query_values"
        android:key="@string/settings_location_pref_key"
        android:title="@string/settings_location_pref_label" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>